--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,21 +36,21 @@ dependencies:
 #  global_configuration: ^1.6.0
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.5.3+2
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   animations: ^2.0.3
   shimmer_animation: ^2.1.0+1
-  simple_animations: ^4.2.0
+  simple_animations: ^5.0.0+3
   flutter_spinkit: ^5.1.0
   get:
   percent_indicator: ^4.2.2
   im_animations: ^0.1.2
-  firebase_core: ^1.20.1
-  google_sign_in: ^5.4.1
-  firebase_auth: ^3.6.3
+  firebase_core: ^2.8.0
+  google_sign_in: ^6.0.2
+  firebase_auth: ^4.3.0
   http:
   shared_preferences: ^2.0.15
   fluttertoast: ^8.0.9
-  modal_progress_hud_nsn: ^0.2.1
+  modal_progress_hud_nsn: ^0.3.0
 
 
 dev_dependencies:
